# family_whiteboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README-DEV.md  app-wasm.js  dev.sh  docker-compose.dev.yml  docker-compose.yml  index.html  nginx.conf  nginx.dev.conf  start-backend.sh  styles.css
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
backend/migrations/: 001_create_todos_table.sql
backend/src/: database.rs  error.rs  handlers.rs  main.rs  models.rs  websocket.rs
docs/: architecture.md
frontend/: api-client.js  app.js  index.html  styles.css
migrations/: 001_init.sql
src/: lib.rs
